ManagedPackage/objects/baddogtail__CampSite__c.object
<CustomObject>
    <fields>
        <fullName>baddogtail__Best_Sties__c</fullName>
        <description>Enter site numbers of preferred sites</description>
        <label>Best Sties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>baddogtail__Electric_Hookup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate if the sites indicated as best site are electric, or if electric sites are available</description>
        <label>Electric Hookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>baddogtail__General_Notes__c</fullName>
        <description>Best and worst about the camp ground or certain sites</description>
        <label>General Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>baddogtail__Last_Stay__c</fullName>
        <label>Last Stay</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>baddogtail__Location__c</fullName>
        <label>Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <label>CampSite</label>
    <listViews>
        <fullName>baddogtail__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>baddogtail__Close_Sites</fullName>
        <columns>NAME</columns>
        <columns>baddogtail__Last_Stay__c</columns>
        <filterScope>Mine</filterScope>
        <label>Close Sites</label>
    </listViews>
    <nameField>
        <label>CampSite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampSites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>